force-app/main/default/objects/AttachmentHeader__c/AttachmentHeader__c.object-meta.xml
<CustomObject>
    <label>AttachmentHeader</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttachmentHeaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>