force-app/main/default/objects/AttachmentHeader__c/fields/AP_Task__c.field-meta.xml
<CustomField>
    <fullName>AP_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AP Task</label>
    <referenceTo>APTaskTemplate__c</referenceTo>
    <relationshipLabel>AttachmentHeaders</relationshipLabel>
    <relationshipName>AttachmentHeaders</relationshipName>
    <type>Lookup</type>
</CustomField>