force-app/main/default/objects/AttachmentHeader__c/fields/AP_Task_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>AP_Task_Unique_Id__c</fullName>
    <label>AP Task Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>