force-app/main/default/objects/AttachmentHeader__c/fields/APT_Task__c.field-meta.xml
<CustomField>
    <fullName>APT_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APT Task</label>
    <referenceTo>APTTaskTemplate__c</referenceTo>
    <relationshipLabel>AttachmentHeaders</relationshipLabel>
    <relationshipName>AttachmentHeaders</relationshipName>
    <type>Lookup</type>
</CustomField>