force-app/main/default/objects/AttachmentHeader__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>