force-app/main/default/objects/AttachmentHeader__c/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Contract_Id__c, &quot;Contract&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Link</label>
    <type>Text</type>
</CustomField>