force-app/main/default/objects/AttachmentHeader__c/fields/Standard_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Task_Id__c</fullName>
    <label>Standard_Task_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>