force-app/main/default/objects/AttachmentHeader__c/fields/Standard_Task_Link__c.field-meta.xml
<CustomField>
    <fullName>Standard_Task_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Standard_Task_Id__c, &quot;Task&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard_Task_Link</label>
    <type>Text</type>
</CustomField>